Stop overlapping text with long name in site info view

--- a/packages/playground/website/src/components/site-manager/site-info-panel/style.module.css
+++ b/packages/playground/website/src/components/site-manager/site-info-panel/style.module.css
@@ -112,7 +112,9 @@
 	/* Provide enough space for most autogenerated site names to avoid
 	   flickering site manager panel width when switching between
 	   sites having names of different lengths */
-	width: 20ch;
+	/* NOTE: This used to be `width`, not `min-width`, and it is possible
+	   the above comment no longer applies. */
+	min-width: 20ch;
 	height: 24px;
 	margin: 0;
 
@@ -130,6 +132,10 @@
 
 	/* Gutenberg/Gray 900 */
 	color: var(--color-gray-900);
+
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .site-info-header-details-created-at {
